Fix the index spacing

--- a/bloom_django/static/css/main.css
+++ b/bloom_django/static/css/main.css
@@ -117,7 +117,6 @@ body{
     background-image: url("../img/front-border.png");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
     width: 45%;
     height: 650px;
     margin: 0 auto;
